The anchored text on the sidebars allow users to jump directly to the content they wish to see. However, the header that is fixed to the top will block the content, forcing users to scroll a bit up. This was fixed by decreasing margin space and then re-adding them back as top padding. (Yes, top margin space can be negative.) Since the h5 elements had a background color, this didn't work. Therefore, a separate div element was created, along with a separate class dedicated towards giving the h5 elements ample space for anchored text to function.

--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,10 @@ body {
   .body #content {
     padding: 2em;
     padding-top: 5em; }
+    .body #content .anchor-offset {
+      margin-top: -6.5em;
+      padding-top: 8.5em;
+      visibility: none; }
     .body #content h5 {
       font-size: 28px;
       font-family: sans-serif;
@@ -101,7 +105,9 @@ body {
       display: block;
       margin-top: 2em;
       margin-bottom: 1em;
-      color: #379683; }
+      color: #379683;
+      margin-top: -4.5em;
+      padding-top: 6.5em; }
     .body #content p {
       font-size: 24px;
       font-family: monospace;
